31-08-06	Added detection of GD extension for media manager
30-08-06    Fixed whitespace in navigation file that caused header error on rebuild
30-08-06    Only check for multi sessions if option enabled
29-08-06    Fixed bugs in MediaMgr
19-08-06    Improved SQL parser regex to be able to catch tables like event-media

IMPROVEMENTS
29-10-06    Tables removed from all templates in user module, replaced with xhtml
            compliant markup (Dmitry Lakachauskis)

27-10-06    Cleaup of SGL_Config behaviour:
                - to load global config: $c = &SGL_Config::singleton();
                - to save global config: $c->save();
                - to load any secondary config: $c = new SGL_Config();
                                                $config = $c->load('/path/to/file');
                                                $c->replace($config);
                - to save any secondary config: $c->save('/path/to/file');
            Replace method takes into accout you may want to load many config files
            but manipulate the data before passing it back to Config object for saving
26-10-06    Some very nice functionality added to the comment module including
            Akismet integration (Steven Stremciuc)
20-10-06    Added example REST client and server implementations (
              http://trac.seagullproject.org/browser/branches/0.6-bugfix/lib/SGL/Services/REST/Client.php
            and
              http://trac.seagullproject.org/browser/branches/0.6-bugfix/docs/developer/examples/modules/REST_server
            respectively, including custom filter chain for server (see conf.ini).
19-10-06    Polish, Italian and Russian translation updates
26-09-06    Enhanced module installer adding symlink support for windows users
22-09-06    Added ability to support s9y comments in BlogMgr (ajmixto)
20-09-06    Better testing of dbdo return values (Steven Stremciuc)
14-09-06    Integrated captcha with comments