@@ -43,6 +43,7 @@ globalJavascriptOnload  =
 additionalIncludePath   =
 moduleDirOverride       =
 uploadDirOverride       =
+pathToCustomConfigFile  =
 
 [cookie]
 path                    = /
